# delivery/http/router.go
@@ -9,7 +9,7 @@ import (
 func newRouter(contr controller) http.Handler {
 	router := httprouter.New()
 	router.POST("/api/albums/", contr.handleAlbum())
-	router.GET("/api/albums/:album/ready/", contr.handleReady())
+	router.GET("/api/albums/:album/status/", contr.handleStatus())
 	router.GET("/api/albums/:album/pair/", contr.handlePair())
 	router.GET("/api/images/:token/", contr.handleImage())
 	router.PATCH("/api/albums/:album/vote/", contr.handleVote())
